<resources>
    <string name="a11y_new_effect_available_indicator">New effect is available</string>
    <string name="a11y_new_effect_indicator">new effect</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_add_attachment">Attach video</string>
    <string name="accessibility_add_more_contacts">Invite contact</string>
    <string name="accessibility_addto">Add to</string>
    <string name="accessibility_annotation_overlay_info_cards_drawer_dismiss">Hide cards</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_annotation_overlay_promo_expand">Expand</string>
    <string name="accessibility_attachment_thumbnail">Attached video</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_camera_close_button">Close</string>
    <string name="accessibility_channel_banner">Channel banner</string>
    <string name="accessibility_channel_banner_camera_icon">Update channel banner</string>
    <string name="accessibility_channel_settings_edit_description">Edit description</string>
    <string name="accessibility_channel_settings_edit_family_name">Edit family name</string>
    <string name="accessibility_channel_settings_edit_given_name">Edit given name</string>
    <string name="accessibility_channel_settings_edit_name">Edit channel name</string>
    <string name="accessibility_channel_subscribe_action">Subscribe to this channel</string>
    <string name="accessibility_channel_unsubscribe_action">Unsubscribe from this channel</string>
    <string name="accessibility_chat_icon_unloaded">Chat icon not loaded</string>
    <string name="accessibility_chat_message_author">Author</string>
    <string name="accessibility_chat_message_video_thumbnail">Video</string>
    <string name="accessibility_clear_search">Clear search</string>
    <string name="accessibility_close_ad_button">Close Ad</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_close_related_video_replies">Close related video replies</string>
    <string name="accessibility_close_share_panel">Close share panel.</string>
    <string name="accessibility_closed_captions">Show closed captions menu</string>
    <string name="accessibility_collaborator_card">Collaborator</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_connections_illustration">Illustration</string>
    <string name="accessibility_decrement_amount">Decrement amount</string>
    <string name="accessibility_dismiss">Dismiss</string>
    <string name="accessibility_dismiss_button">Remove suggested contact</string>
    <string name="accessibility_dismiss_chat_video">Dismiss video</string>
    <string name="accessibility_drag_handle">Drag handle</string>
    <string name="accessibility_end_screen_play_button">Continue Watching</string>
    <string name="accessibility_engagement">Engagement overlay</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_enter_vr_mode">Enter virtual reality mode</string>
    <string name="accessibility_episode_card">Episode</string>
    <string name="accessibility_error_icon">Chat error</string>
    <string name="accessibility_exit_fullscreen">Exit fullscreen</string>
    <string name="accessibility_expand_hats_survey">Expand survey</string>
    <string name="accessibility_facepile_hearts">Hearts</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_feed_filter_bar_content_description">filters</string>
    <string name="accessibility_filter_view_closed">Filter effects list closed.</string>
    <string name="accessibility_filter_view_selected">%s selected</string>
    <string name="accessibility_filter_view_shown">Filter effects list shown.</string>
    <string name="accessibility_filter_view_unselected">%s unselected</string>
    <string name="accessibility_flag">Flag video</string>
    <string name="accessibility_flashlight_turned_off">Flashlight turned off</string>
    <string name="accessibility_flashlight_turned_on">Flashlight turned on</string>
    <string name="accessibility_go_to_channel">Go to channel</string>
    <string name="accessibility_go_to_game_page">Go to game page</string>
    <string name="accessibility_go_to_video">Go to video</string>
    <string name="accessibility_header_postfix">Heading</string>
    <string name="accessibility_heart">Heart</string>
    <string name="accessibility_help_edit_text_input">More information</string>
    <string name="accessibility_hide_player_controls">Hide controls</string>
    <string name="accessibility_hide_relateds">Hide related videos</string>
    <string name="accessibility_incept_button">Open video player</string>
    <string name="accessibility_increment_amount">Increment amount</string>
    <string name="accessibility_info_cards">Show Cards</string>
    <string name="accessibility_invite">Invite Icon</string>
    <string name="accessibility_invite_button">Invite contact</string>
    <string name="accessibility_invite_more_participants">Add participants</string>
    <string name="accessibility_like_video">Like button</string>
    <string name="accessibility_list_item_drag_end">Moved item %1$d to position %2$d of %3$d</string>
    <string name="accessibility_list_item_drag_over">%1$d</string>
    <string name="accessibility_list_item_drag_start">Moving item %1$d of %2$d</string>
    <string name="accessibility_map_link">Map of this location</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_miniplayer">Open mini player</string>
    <string name="accessibility_more_actions_video">More actions</string>
    <string name="accessibility_movie_card">Movie</string>
    <string name="accessibility_multi_recipient_share_illustration">Illustration</string>
    <string name="accessibility_new_content_available">New content available</string>
    <string name="accessibility_next">Next video</string>
    <string name="accessibility_notifications_muted">Notifications muted for this chat</string>
    <string name="accessibility_notifications_muted_technodrome">Notifications are muted for this chat</string>
    <string name="accessibility_offline_button_cancel">Stop downloading</string>
    <string name="accessibility_offline_button_cannot_save">Can\'t download</string>
    <string name="accessibility_offline_button_pause">Pause download</string>
    <string name="accessibility_offline_button_remove_playlist">Remove downloaded playlist</string>
    <string name="accessibility_offline_button_remove_video">Remove from downloads</string>
    <string name="accessibility_offline_button_resume">Resume download</string>
    <string name="accessibility_offline_button_retry">Retry download</string>
    <string name="accessibility_overflow">More options</string>
    <string name="accessibility_play">Play video</string>
    <string name="accessibility_previous">Previous video</string>
    <string name="accessibility_share">Share</string>
    <string name="ad_learn_more">Visit advertiser</string>
    <string name="error_loading_conversation">Error loading this page.</string>
    <string name="inline_global_play_pause_off">Off</string>
    <string name="inline_global_play_pause_on">Always on</string>
    <string name="inline_global_play_pause_on_wifi_only">Wi-Fi only</string>
    <string name="live_label">LIVE</string>
    <string name="menu_clear_offline">Delete all downloads</string>
    <string name="menu_cross_device_offline">Cross device offline settings</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="menu_privacy_policy">Terms &amp; privacy policy</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_watch_on_tv">Watch on TV</string>
    <string name="on">on</string>
    <string name="play_on_label">Play on</string>
    <string name="pref_background_audio_policy_title">Playback</string>
    <string name="pref_background_options_title">Background play</string>
    <string name="pref_developer_innertube_backend_summary">%1$s selected</string>
    <string name="pref_developer_innertube_backend_title">InnerTube backend</string>
    <string name="pref_developer_mdx_debug_command_title">MDX Debug Command</string>
    <string name="pref_developer_mdx_host_summary">%1$s selected</string>
    <string name="pref_developer_mdx_host_title">MDX backend</string>
    <string name="pref_developer_online_ads_summary">Show online ads preferences for controlling ads requests</string>
    <string name="pref_developer_online_ads_title">Online ads</string>
    <string name="pref_developer_payment_environment_summary">Payment environment %1$s selected</string>
    <string name="pref_developer_payment_environment_title">Payment environment</string>
    <string name="pref_offline_help_summary">Find answers to your questions about downloading videos</string>
    <string name="pref_offline_help_title">Downloading help</string>
    <string name="pref_offline_insert_sd_card_summary">Insert an SD card to choose where downloads go</string>
    <string name="pref_offline_insert_sd_card_title">Insert an SD card</string>
    <string name="pref_offline_network_policy_title">Download over Wi-Fi only</string>
    <string name="pref_offline_options_title">Download</string>
    <string name="pref_offline_quality_title">Download quality</string>
    <string name="pref_offline_recs_enabled_title">Recommend downloads</string>
    <string name="pref_offline_storage_title_primary">Available storage</string>
    <string name="pref_offline_storage_title_sdcard">SD card</string>
    <string name="pref_offline_use_sd_card_summary">Download videos to the SD card</string>
    <string name="pref_offline_use_sd_card_title">Use SD card</string>
    <string name="show_more_videos">MORE VIDEOS</string>
    <string name="vr_welcome_accessibility_vr_with_phone">VR with phone</string>
    <string name="vr_welcome_continue">Continue</string>
    <string name="vr_welcome_dont_have_viewer">Don\'t have a viewer?</string>
    <string name="vr_welcome_experience_vr">Experience YouTube in VR</string>
    <string name="vr_welcome_get_vr_headset_link">Get a VR headset</string>
    <string name="vr_welcome_watch_videos">Place your phone in a VR headset. For the best VR experience, turn on High Quality playback.</string>
    <string name="yt_lib_common_retry">Retry</string>
</resources>