<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/menu_cast" android:title="@string/play_on_label" app:showAsAction="always" app:actionLayout="@layout/castmediaroutebutton"/>
    <item android:icon="@drawable/ic_menu_search_mtrl_alpha" android:id="@+id/menu_search" android:orderInCategory="50" android:title="@string/menu_search" app:showAsAction="always"/>
    <item android:id="@+id/menu_settings" android:orderInCategory="101" android:title="@string/menu_settings" app:showAsAction="never"/>
    <item android:id="@+id/menu_watch_on_tv" android:orderInCategory="102" android:title="@string/menu_watch_on_tv" app:showAsAction="never"/>
    <item android:id="@+id/menu_privacy_policy" android:orderInCategory="103" android:title="@string/menu_privacy_policy" app:showAsAction="never"/>
    <item android:id="@+id/menu_help" android:orderInCategory="104" android:title="@string/menu_help" app:showAsAction="never"/>
</menu>
