<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/image" android:background="#ff0000" android:layout_width="match_parent" android:layout_height="0dp" android:src="@drawable/phone_into_cardboard" android:scaleType="center" android:minHeight="70dp" android:layout_weight="1" android:contentDescription="@string/vr_welcome_accessibility_vr_with_phone"/>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="2">
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?attr/textAppearanceHeadline" android:gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/vr_welcome_experience_vr" android:layout_weight="1" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:gravity="center_horizontal" android:id="@+id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/vr_welcome_watch_videos" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
        <Button android:id="@+id/continue_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/vr_welcome_continue"/>
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:gravity="center" android:id="@+id/dont_have_viewer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/vr_welcome_dont_have_viewer"/>
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:gravity="center_horizontal" android:id="@+id/link" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_marginTop="8dp" android:text="@string/vr_welcome_get_vr_headset_link" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
