<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <ListPreference android:key="media_network_activation_type" android:defaultValue="0"/>
    <PreferenceScreen android:title="Backend settings">
        <ListPreference android:title="@string/pref_developer_innertube_backend_title" android:key="ApiaryHostSelection" android:summary="@string/pref_developer_innertube_backend_summary" android:defaultValue="0"/>
        <ListPreference android:title="@string/pref_developer_payment_environment_title" android:key="InnerTubeApiSelection" android:summary="@string/pref_developer_payment_environment_summary" android:defaultValue="0"/>
        <ListPreference android:title="@string/pref_developer_mdx_host_title" android:key="MdxServerSelection" android:summary="@string/pref_developer_mdx_host_summary" android:defaultValue="0"/>
    </PreferenceScreen>
    <EditTextPreference android:digits="0123456789, " android:key="experiment_ids" android:defaultValue="" android:inputType="number"/>
    <EditTextPreference android:key="experiment_flags" android:defaultValue="" android:inputType="textNoSuggestions"/>
    <Preference android:key="experiments_token"/>
    <Preference android:key="refresh_innertube_config"/>
    <EditTextPreference android:digits="0123456789." android:key="innertube_override_version" android:defaultValue=""/>
    <EditTextPreference android:key="innertube_promo_id" android:defaultValue="" android:inputType="textNoSuggestions"/>
    <Preference android:key="clear_visitor_id"/>
    <Preference android:key="copy_visitor_id"/>
    <Preference android:key="sign_out_id"/>
    <ListPreference android:enabled="false" android:key="internal_geo"/>
    <EditTextPreference android:key="system_language_override" android:defaultValue=""/>
    <PreferenceScreen android:title="Uploads">
        <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:key="enable_upload_video_editing" android:defaultValue="false"/>
        <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:key="enable_upload_audio_swap" android:defaultValue="false"/>
        <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:key="enable_upload_filters" android:defaultValue="false"/>
        <ListPreference android:key="camera_audio_source" android:defaultValue="0"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="Suggest">
        <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:key="dogfood_suggest_log_requests" android:defaultValue="false"/>
        <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:key="dogfood_suggest_log_responses" android:defaultValue="false"/>
        <EditTextPreference android:key="dogfood_suggest_client_name_override" android:defaultValue="" android:inputType="textNoSuggestions"/>
        <EditTextPreference android:key="dogfood_suggest_host_override" android:defaultValue="" android:inputType="textNoSuggestions"/>
        <EditTextPreference android:key="dogfood_suggest_response_override" android:defaultValue="" android:inputType="textNoSuggestions"/>
        <EditTextPreference android:key="dogfood_suggest_sugexp_override" android:defaultValue="" android:inputType="textNoSuggestions"/>
        <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:key="dogfood_suggest_send_visitor_id_signed_out" android:defaultValue="false"/>
        <CheckBoxPreference android:title="Enable on device suggest for dogfood." android:key="enable_on_device_suggest" android:defaultValue="false"/>
        <EditTextPreference android:digits="0123456789." android:title="On-device suggest download earliest seconds" android:key="on_device_suggest_download_earliest_secs" android:summary="Shared preference string for the time in seconds to wait before running the download task required by On-Device Suggest." android:defaultValue="30" android:inputType="number"/>
        <EditTextPreference android:title="Latest on-device suggest index URL" android:key="latest_on_device_suggest_index_url" android:summary="Shared preference string for the URL of the latest on device suggest index file." android:defaultValue="https://ssl.gstatic.com/suggest-dev/yt/tl_yt-en-us_2018-07-14_204909412_100000_index.bin" android:inputType="textNoSuggestions"/>
    </PreferenceScreen>
    <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:title="Force-enable Sticky Browsy Bars in Search Results" android:key="force_enable_sticky_browsy_bars" android:defaultValue="false"/>
    <com.google.android.apps.youtube.app.settings.YouTubeSwitchPreference android:key="bypass_rate_limit" android:defaultValue="false"/>
    <EditTextPreference android:persistent="false" android:title="@string/pref_developer_mdx_debug_command_title" android:key="MdxDebugCommand" android:defaultValue=""/>
    <PreferenceScreen android:title="Ads">
        <Preference android:title="@string/pref_developer_online_ads_title" android:key="OnlineAd" android:summary="@string/pref_developer_online_ads_summary"/>
    </PreferenceScreen>
</PreferenceScreen>
