<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:paddingTop="12dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/error_icon" android:padding="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/quantum_ic_error_outline_grey600_48" android:contentDescription="@string/accessibility_error_icon"/>
    <Button android:id="@+id/error_retry_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="24dp" android:text="@string/yt_lib_common_retry" android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/large_font_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/error_loading_conversation" android:layout_toLeftOf="@+id/error_retry_button" android:layout_toRightOf="@+id/error_icon"/>
    <View android:background="?attr/ytSeparator" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@+id/error_icon"/>
</RelativeLayout>
