<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/controls_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="@android:color/white" android:gravity="center" android:id="@+id/player_error_view" android:background="@color/darker_transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerInParent="true"/>
    <View android:id="@+id/bottom_bar_background" android:background="@drawable/player_bottom_bar" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentBottom="true"/>
    <View android:id="@+id/top_bar_background" android:background="@drawable/player_top_bar" android:layout_width="match_parent" android:layout_height="56dp" android:layout_alignParentTop="true"/>
    <TextView android:textSize="@dimen/extra_small_font_size" android:textColor="#fff2f2f2" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/related_videos_screen_button" android:background="@drawable/dark_rounded_rectangle" android:paddingLeft="16dp" android:paddingRight="16dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginLeft="12dp" android:layout_marginBottom="56dp" android:maxWidth="120dp" android:minHeight="40dp" android:text="@string/show_more_videos" android:maxLines="1" android:layout_alignParentBottom="true"/>
    <RelativeLayout android:id="@+id/bottom_bar_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="horizontal" android:id="@+id/bottom_end_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:animateLayoutChanges="true">
            <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/hide_controls_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_hide_controls" android:scaleType="center" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/accessibility_hide_player_controls" style="@style/PlayerButton"/>
            <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/fullscreen_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_fullscreen" android:scaleType="center" android:minWidth="48dp" android:minHeight="48dp" android:contentDescription="@string/accessibility_enter_fullscreen" style="@style/PlayerButton"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/time_bar_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/bottom_end_container" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_alignWithParentIfMissing="true">
            <TextView android:textSize="@dimen/small_font_size" android:textColor="#fff2f2f2" android:gravity="center" android:id="@+id/live_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:minHeight="48dp" android:text="@string/live_label" android:drawableLeft="@drawable/player_live_dot" android:drawablePadding="8dp" android:textAllCaps="true"/>
            <com.google.android.libraries.youtube.player.features.overlay.timebar.TimeBar android:id="@+id/time_bar" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/player_overflow_button" android:paddingLeft="6dp" android:paddingTop="14dp" android:paddingRight="8dp" android:paddingBottom="14dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_overflow" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/accessibility_overflow" style="@style/PlayerButton"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/player_additional_view_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/player_overflow_button" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true"/>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/player_share_button" android:paddingLeft="6dp" android:paddingTop="14dp" android:paddingRight="6dp" android:paddingBottom="14dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_share" android:layout_toLeftOf="@+id/player_additional_view_container" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/accessibility_share" style="@style/PlayerButton"/>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/player_addto_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_addto" android:layout_toLeftOf="@+id/player_share_button" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/accessibility_addto" style="@style/PlayerButton"/>
    <TextView android:textColor="@android:color/white" android:gravity="center" android:id="@+id/player_learn_more_button" android:paddingLeft="4dp" android:paddingRight="8dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginRight="2dp" android:text="@string/ad_learn_more" android:shadowColor="#7f000000" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="0.01" android:layout_toLeftOf="@+id/player_share_button" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" style="@style/PlayerButton"/>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/player_control_play_pause_replay_button" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginRight="32dp" android:src="@drawable/player_play" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_play" style="@style/PlayerButton"/>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/player_control_previous_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_prev" android:scaleType="center" android:layout_toLeftOf="@+id/player_control_play_pause_replay_button" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_previous" style="@style/PlayerButton"/>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/player_control_next_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_next" android:scaleType="center" android:layout_toRightOf="@+id/player_control_play_pause_replay_button" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_next" style="@style/PlayerButton"/>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/player_collapse_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_collapse" android:scaleType="center" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/accessibility_collapse" style="@style/PlayerButton"/>
    <TextView android:textSize="@dimen/small_font_size" android:textColor="#fff2f2f2" android:ellipsize="end" android:id="@+id/player_video_title_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginTop="17dp" android:layout_marginRight="4dp" android:maxLines="1" android:layout_toLeftOf="@+id/player_addto_button" android:layout_toRightOf="@+id/player_collapse_button" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"/>
    <ProgressBar android:id="@+id/player_loading_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_centerInParent="true"/>
</RelativeLayout>
